<resources>
    <string name="app_name">My Application</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_list">List</string>
    <string name="action_add">Add</string>
    <string name="action_settings">Settings</string>

    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="login_save_account">Save account</string>
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <string name="guest">GUEST</string>

    <string name="nav_gallery">Gallery</string>
    <string name="nav_weather">Weather</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
